style: Prefer List.of()