@@ -329,7 +329,7 @@ public class JaxrsApplicationParser extends RestApplicationParser {
     private static Map<Class<?>, TsType> standardEntityClassesMapping;
 
     private static List<String> getDefaultExcludedClassNames() {
-        return Arrays.asList(
+        return List.of(
                 "org.glassfish.jersey.media.multipart.FormDataBodyPart");
     }
 
