@@ -40,7 +40,7 @@ public class DecoratorsTest {
 
         @Override
         public List<TransformerDefinition> getTransformers() {
-            return Arrays.asList(
+            return List.of(
                     new TransformerDefinition(ModelCompiler.TransformationPhase.BeforeEnums, new TsModelTransformer() {
                         @Override
                         public TsModel transformModel(Context context, TsModel model) {
@@ -56,9 +56,9 @@ public class DecoratorsTest {
                 return bean;
             }
             return bean
-                    .withDecorators(Arrays.asList(new TsDecorator(
+                    .withDecorators(List.of(new TsDecorator(
                             new TsIdentifierReference("JsonObject"),
-                            Arrays.asList(new TsStringLiteral(bean.getOrigin().getSimpleName())))))
+                            List.of(new TsStringLiteral(bean.getOrigin().getSimpleName())))))
                     .withProperties(bean.getProperties().stream()
                             .map(ClassNameDecoratorExtension.this::decorateProperty)
                             .collect(Collectors.toList()));
@@ -66,7 +66,7 @@ public class DecoratorsTest {
 
         private TsPropertyModel decorateProperty(TsPropertyModel property) {
             return property
-                    .withDecorators(Arrays.asList(new TsDecorator(
+                    .withDecorators(List.of(new TsDecorator(
                             new TsIdentifierReference("JsonProperty"),
                             Arrays.asList(
                                     new TsStringLiteral(property.getName()),
@@ -92,16 +92,17 @@ public class DecoratorsTest {
         final TsBeanModel bean = tsModel.getBean(City.class);
         final TsBeanModel bean2 = bean
                 .withConstructor(bean.getConstructor()
-                        .withParameters(Arrays.asList(bean.getConstructor().getParameters().get(0)
-                                .withDecorators(Arrays.asList(new TsDecorator(
+                        .withParameters(Collections.singletonList(bean.getConstructor().getParameters().get(0)
+                                .withDecorators(List.of(new TsDecorator(
                                         new TsIdentifierReference("Inject"),
-                                        Arrays.asList(new TsStringLiteral("token"))))))))
-                .withMethods(Arrays.asList(new TsMethodModel("greet", null, null, Collections.emptyList(), TsType.Void,
-                        Collections.emptyList(), null)
-                        .withDecorators(Arrays.asList(new TsDecorator(
-                                new TsIdentifierReference("enumerable"),
-                                Arrays.asList(new TsBooleanLiteral(false)))))));
-        final TsModel tsModel2 = tsModel.withBeans(Arrays.asList(bean2));
+                                        List.of(new TsStringLiteral("token"))))))))
+                .withMethods(Collections
+                        .singletonList(new TsMethodModel("greet", null, null, Collections.emptyList(), TsType.Void,
+                                Collections.emptyList(), null)
+                                .withDecorators(List.of(new TsDecorator(
+                                        new TsIdentifierReference("enumerable"),
+                                        List.of(new TsBooleanLiteral(false)))))));
+        final TsModel tsModel2 = tsModel.withBeans(Collections.singletonList(bean2));
         final String output = emit(typeScriptGenerator.getEmitter(), tsModel2);
         Assertions.assertTrue(output.contains("@Inject(\"token\")"));
         Assertions.assertTrue(output.contains("@enumerable(false)"));
